build/resources/test/LO-2/ValidPrograms/test_35.lo
// *Good testcase*
// Return value as argument
// main return value: 30
// Author: Fall 2021 TAs

int foo() {
   {return 10;}
}

int bar(int a) {
    {return (a + 20);}
}

int main() {
    {return bar(foo());}
}